--- a/generate_emotion.ipynb
+++ b/generate_emotion.ipynb
@@ -29,12 +29,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diary_score = text.text_to_score(diary_text)"
+    "diary_score = text.text_to_score(diary_text)\n",
+    "diary_score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,49 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['가뜬하다',\n",
-       " '간절한',\n",
-       " '감복하다',\n",
-       " '감홍',\n",
-       " '감회',\n",
-       " '경외하다',\n",
-       " '계면쩍은',\n",
-       " '고무되다',\n",
-       " '그립다',\n",
-       " '놀랍다',\n",
-       " '달가워하다',\n",
-       " '목이 메이는',\n",
-       " '몸 둘 바를 모르는',\n",
-       " '뭉클하다',\n",
-       " '손에 땀을 쥐는 듯한',\n",
-       " '안도하다',\n",
-       " '애',\n",
-       " '애착',\n",
-       " '애틋하다',\n",
-       " '어리둥절한',\n",
-       " '얼떨떨하다',\n",
-       " '연모하다',\n",
-       " '우수',\n",
-       " '짝사랑하다',\n",
-       " '태평스럽다',\n",
-       " '팔팔한',\n",
-       " '황공하다',\n",
-       " '흥분',\n",
-       " '흥취',\n",
-       " '희희낙락하다']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "emotion_lst"
    ]
@@ -114,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
