[refactor] : code refactoring

--- a/gradio.ipynb
+++ b/gradio.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\hg\\github\\AI-API\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "c:\\Users\\hg\\github\\AI-API\\.venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
+      "c:\\Users\\hg\\Desktop\\새 폴더\\AI-API\\.venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
       "  warn_deprecated(\n"
      ]
     },
@@ -40,33 +38,25 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hg\\github\\AI-API\\.venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.schema import AIMessage, HumanMessage, SystemMessage\n",
     "import gradio as gr\n",
-    "import os, util.api as api\n",
+    "import os, utils.api as api\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = api.api_key\n",
+    "os.environ[\"OPENAI_API_KEY\"] = api.get_api_key()\n",
     "\n",
     "llm = ChatOpenAI(temperature=1.0, model='gpt-4o')\n",
     "\n",
     "def response(message, history):\n",
     "        history_langchain_format = []\n",
     "        # additional_input_info로 받은 시스템 프롬프트를 랭체인에게 전달할 메시지에 포함시킨다.\n",
-    "        history_langchain_format.append(SystemMessage(content= api.sys_txt))\n",
+    "        history_langchain_format.append(SystemMessage(content= api.get_sys_text()))\n",
     "        for human, ai in history:\n",
     "                history_langchain_format.append(HumanMessage(content=human))\n",
     "                history_langchain_format.append(AIMessage(content=ai))\n",
