[refactor] : code refactor

--- a/image_generation.ipynb
+++ b/image_generation.ipynb
@@ -6,63 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import image\n",
-    "\n",
-    "\n",
-    "example_input = ['강아지', '침대', '맥북', '테니스 공', '버스 정류장']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt = image.lst_to_str(example_input)\n",
-    "prompt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = image.generate(prompt=prompt)\n",
-    "# 좀 더 프롬프트 형식을 지정해줘야 할 것으로 보임\n",
-    "url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url[0].url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "\n",
-    "response = requests.get(url[0].url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if response.status_code == 200:\n",
-    "    with open('image.png', 'wb') as file:\n",
-    "        file.write(response.content)\n",
-    "        "
+    "diary_text = \"\"\"\n",
+    "오늘 하루는 피곤하고 스트레스가 많았다. 회사에서 마감일이 다가와 업무가 산더미처럼 쌓였다.\n",
+    "점심시간에 잠깐 산책을 하며 마음을 가라앉혔지만, 돌아오니 다시 업무가 쌓여 있었다.\n",
+    "그래도 동료들과 함께 힘을 내어 열심히 일한 덕분에 중요한 일을 마무리할 수 있었다. \n",
+    "집에 와서 따뜻한 차 한 잔 마시며 하루를 정리하니 조금 마음이 편해졌다. 내일은 더 나은 하루가 되길 기대해 본다.\n",
+    "\"\"\""
    ]
   },
   {
@@ -71,17 +20,38 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"강아지가 침대 옆에서 물고 놀고 있는 테니스 공, 그 앞에 맥북이 놓여 있고, 창 밖 버스 정류장에서 버스가 기다리는 장면을 픽셀 아트로 그려줘.\"\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['업무', '동료', '산책', '차']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from utils import image\n",
     "\n",
-    "lst = ['강아지', '침대', '맥북', '테니스 공', '버스 정류장' ]\n",
+    "lst = image.diary_to_words_lst(diary_text)\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "업무로 지친 동료와 함께 사무실 근처 공원으로 나가 산책하며 차 한 잔의 여유를 즐기는 모습.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import image\n",
     "\n",
     "words_prompt = image.words_lst_to_str(lst)\n",
     "prompt = image.words_str_prompting(words_prompt)\n",
@@ -90,31 +60,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://oaidalleapiprodscus.blob.core.windows.net/private/org-HgTUGupS4dNe3VNBdFPOzaJy/user-M5poCEhkI0N2ucgRWMbeEjsA/img-3NikpBaDdwAludcX8jRuM1fr.png?st=2024-07-26T02%3A48%3A12Z&se=2024-07-26T04%3A48%3A12Z&sp=r&sv=2023-11-03&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-07-25T23%3A36%3A20Z&ske=2024-07-26T23%3A36%3A20Z&sks=b&skv=2023-11-03&sig=2OYnfah1pWBmbYquPwfT7URmUN3afumx2LLNnkMaGBw%3D\n"
+     ]
+    }
+   ],
    "source": [
-    "url = image.generate_image(prompt)"
+    "url = image.generate_image(prompt)\n",
+    "print(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://oaidalleapiprodscus.blob.core.windows.net/private/org-HgTUGupS4dNe3VNBdFPOzaJy/user-M5poCEhkI0N2ucgRWMbeEjsA/img-jQT0XDK0qv8iz4yEugPMpQRR.png?st=2024-07-26T02%3A10%3A31Z&se=2024-07-26T04%3A10%3A31Z&sp=r&sv=2023-11-03&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-07-25T23%3A43%3A58Z&ske=2024-07-26T23%3A43%3A58Z&sks=b&skv=2023-11-03&sig=uw6hVhT2/tTBulc5I2O3jqf1hxmkAnweHAnMLfYBiDg%3D'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "url"
+    "import requests\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open('image.png', 'wb') as file:\n",
+    "        file.write(response.content)\n",
+    "        "
    ]
   },
   {
